# linkedin_resume_ai

./: .flake8  .gitignore  CLAUDE.md  README.md  conftest.py  development_plan.txt  pyproject.toml  requirements.txt  setup.cfg
.claude/: settings.json
.claude/commands/: deploy.md  parallel-dev.md  review.md  setup-token-tracking.md
.claude/hooks/: log_token_usage.py
.github/workflows/: ci.yml  deploy.yml
app/: app.py
app/assets/: style.css
app/components/: __init__.py  education.py  experience.py  skills.py
data/: README.md
deployment/: deploy.sh  requirements-deploy.txt
docs/: architecture.md
scripts/: scrape_linkedin.py
src/linkedin_project/: __init__.py
src/linkedin_project/scrape/: __init__.py  schema.py  scraper.py
src/linkedin_project/storage/: __init__.py  database.py
src/linkedin_project/transform/: __init__.py  cleaner.py  normalizer.py
tests/: conftest.py  test_app.py  test_scrape.py  test_storage.py  test_transform.py
tests/fixtures/linkedin_responses/: certifications.json  profile.json  recommendations.json  skills.json
