[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-project"
version = "0.1.0"
description = "LinkedIn Resume AI - core project logic"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]
