[metadata]
name = linkedin_project
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -v

[flake8]
max-line-length = 99
extend-ignore = E203, W503
exclude =
    .venv,
    .git,
    __pycache__,
    build,
    dist
